--- a/index.html
+++ b/index.html
@@ -1138,12 +1138,15 @@
                   <p class='rol'>Princesa <b style='color:#fff;'>+100</b></p>
                 </div>
                 </div>">Laura Escobar Bonnett</a><br><span title="14 de Marzo de 2022 a las 10:43 pm" class="time">14 de Marzo a las 10:43 pm</span></p>
-            </div>
+            <span title="Editado el 29 de Agosto de 2022 a las 7:19 pm" class="Editado">Editado</span></div>
             <span class="title">We're Live!</span>
             <text>
                 <p style="color: #aaa; text-align: left; "> Comenten Y Respondan Mucho Y En Todos Los Posts, Fotos, Videos Y Artículos, En Especial Los Que Ya Tienen Comentarios. Los Comentarios Oficiales Se Mezclarán Con Los Suyos.</p>
                 <p style="color: #aaa; text-align: left; ">&nbsp&nbsp&nbsp&nbspEn <a target="_blank" href="/user">user</a> Pueden Cambiar Sus Datos, No Tienen Que Recargar Las Páginas En Donde Están Comentando.</p>
                 <p style="color: #aaa; text-align: left; ">&nbsp&nbsp&nbsp&nbspDando Click Con El Botón Derecho Del Mouse Al Link A La Estática, Que Está A La Derecha Del Todo Abajo Puedes Abrir Los Posts En El Theater</p>
+                <br>
+                <br>
+                <p style="color: #aaa; text-align: left; ">&nbsp&nbsp&nbsp&nbspEl Hecho De Que Los Comentarios Se Mezclan Con Los Nuevos Depende De Que La Página Esté En Un Sitio Web; Por Ahora, No Funciona</p>
             </text>
             <div class="Comentarios">
                 <div class="comentario">
