--- a/LamaMadora.html
+++ b/LamaMadora.html
@@ -515,7 +515,90 @@
                     </aside>
                     <aside id="updates">
                         <aside id="feed">
-                            <section class="current story img repost">
+                            <section class="current story repost">
+                                <div class="info">
+                                    <img class="repost" src="/resources/images/LamaMadora/sdlQg1CoQ3_tn.jpg" alt="">
+                                    <div class="repostedFrom"></div>
+                                    <img class="repost" src="/resources/images/A.K.A._Dizzy/1AzV0qwVwn_tn.gif" alt="">
+                                    <p class="username repost"><a class="target" href="/LamaMadora" title="         
+              <div class='tool'>
+                <input class='knob button' data-width='102' data-height='102' data-fgColor='#2ecc71' data-bgColor='rgba(0,0,0,0)' data-displayInput=false data-thickness='.08' readonly value='88'>
+                <img src='/resources/images/LamaMadora/sdlQg1CoQ3_tn.jpg'>
+                <div class='datos'>
+                  <ul class='actions'>
+                    <li class='chatear' title='Chatear'>C</li>
+                    <li class='agregar' title='Agregar'>A</li>
+                    <li class='juzgar' title='Juzgar'>J</li>
+                  </ul>                  
+                  <p title= 'Juan José Martínez Vidal' class='username'>Juan José Martínez Vidal</p>
+                  <p class='rol'>Dubber <b style='color:#fff;'>+88</b></p>
+
+                </div>
+                <div class='insignia' style='top: 11px; border-bottom-color: #4f61bf; ' title='Curso completado (Dubbing en español)'></div>
+                <div class='insignia' style='top: 23px; border-bottom-color: #79371d; 'title='Curso completado (Sub syncing)'></div>
+                <div class='insignia' style='top: 17px; border-bottom-color: #8c8866; ' title='Rol asignado (Dubber)'> </div>
+
+              </div>">Juan José Martínez Vidal</a> Reposteó de <a class="target" href="/A.K.A._Dizzy" title="         
+                <div class='tool'>
+                    <input class='knob button' data-width='102' data-height='102' data-fgColor='#2ecc71' data-bgColor='rgba(0,0,0,0)'   data-displayInput=false data-thickness='.08' readonly value='100'>
+                    <img src='/resources/images/A.K.A._Dizzy/1AzV0qwVwn_tn.gif'>
+                    <div class='datos'>
+                    <ul class='actions'>
+                        <li class='chatear' title='Chatear'>C</li>
+                        <li class='agregar' title='Agregar'>A</li>
+                        <li class='juzgar' title='Juzgar'>J</li>
+                    </ul>                  
+                    <p class='username' title= 'Luis Eduardo Gallego García'>Luis Eduardo Gallego García</p>
+                    <p class='rol'>CEO <b style='color:#fff;'>+100</b></p>
+
+                    </div>
+                    <div class='insignia' style='top: 9px;' title='Proyecto completado (aNGEL();)'></div>
+                    <div class='insignia' style='top: 22px;'title='Proyecto completado (por_siLaBas();)'></div>
+                    <div class='insignia' style='top: 14px;' title='Proyecto completado (dinosaurios)'> </div>
+                    <div class='insignia' style='top: 39px;' title='EP (Planifique)'> </div> <div class='insignia' style='top: 43px;'   title='Proyecto completado (Robot De Dedicatorias)'> </div>
+                </div>">Luis Eduardo Gallego García</a> <br><span title="31 de Agosto de 2022 a las 3:43 pm" class="time">31 de Agosto a las 3:43 pm</span></p>
+                    <span title="Editado el 31 de Agosto de 2022 a las 3:38 pm" class="Editado">Editado</span>
+                                </div>
+                                <p class="title">Constructor And Business Partners - Planifique (LQ)</p>
+                                <media>
+                                    <div class="media">
+                                        <audio src="/resources/Un Palmeteo Flamenco.mp3"></audio>
+                                        <p>Un Palmeteo Flamenco</p>
+                                    </div>
+                                    <div class="media">
+                                        <audio src="/resources/Tal Vez Era Ayer.mp3"></audio>
+                                        <p>Tal Vez Era Ayer</p>
+                                    </div>
+                                    <div class="media">
+                                        <audio src="/resources/Laura.mp3"></audio>
+                                        <p>Laura</p>
+                                    </div>
+                                    <div class="media">
+                                        <audio src="/resources/La Olvidaré.mp3"></audio>
+                                        <p>La Olvidaré</p>
+                                    </div>
+                                    <div class="media">
+                                        <audio src="/resources/Respuestas En Mi Sin Tilde.mp3"></audio>
+                                        <p>Respuestas En Mi Sin Tilde</p>
+                                    </div>
+                                    <div class="media">
+                                        <audio src="/resources/Punk Für Sie.mp3"></audio>
+                                        <p>Punk Für Sie</p>
+                                    </div>
+                                </media>
+                                <div class="Comentarios"></div>
+                                <div class="options button">
+                                    <ul>
+                                        <li class="bookmark"></li>
+                                        <li class="star"></li>
+                                        <li class="Enlargetic">
+                                            <a href="/A.K.A._Dizzy/pos/r1WjYcRQhw" target="_blank" class="read active" title=""></a>
+                                            <span title="" class="Enlarge"></span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </section>
+                            <section class="story img repost">
                                 <div class="info">
                                     <img class="repost" src="/resources/images/LamaMadora/sdlQg1CoQ3_tn.jpg" alt="">
                                     <div class="repostedFrom"></div>
