--- a/A.K.A._Dizzy.html
+++ b/A.K.A._Dizzy.html
@@ -1574,7 +1574,7 @@
               </div>">
                                             Luis Eduardo Gallego García
                                         </a><br><span title="2 de Septiembre de 2021 a las 0:30 am" class="time">Septiembre de 2021</span></p>
-                                    <span title="Editado el 24 de Julio de 2022 a las 3:23 pm" class="Editado">Editado</span>
+                                    <span title="Editado el 31 de Agosto de 2022 a las 3:38 pm" class="Editado">Editado</span>
                                 </div>
                                 <p class="title">Constructor And Business Partners - Planifique (LQ)</p>
                                 <media>
