Fix video reposts and evertn everwr
Constructor && Business Partners

--- a/G-Suschrist.html
+++ b/G-Suschrist.html
@@ -490,7 +490,7 @@
                                     </ul>
                                 </div>
                             </section>
-                            <section class="story links repost">
+                            <section class="story links">
                                 <div class="info">
                                     <img class="fork" src="/resources/images/G-Suschrist/Rvu7YjVcXr_tn.jpg" alt="">
                                     <div class="forkedFrom"></div>
