--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
                                         </ul>
                                     </div>
                                 </section>
-        <section class="story links repost">
+        <section class="story links">
                                 <div class="info">
                                     <img class="fork" src="/resources/images/G-Suschrist/Rvu7YjVcXr_tn.jpg" alt="">
                                     <div class="forkedFrom"></div>
@@ -1664,7 +1664,7 @@
             <div class="info">
                 <img src="/resources/images/white.jpg" alt="">
                 <p class="username">
-                    <a href="user">
+                    <a href="/user">
                         Walter White
                     </a>
                     <br>
@@ -1686,7 +1686,7 @@
                     </li>
                     <li class="star">
                     </li>
-                    <a href="/user/img/avatar">
+                    <a href="/user/img/avatar" target="_blank">
                         <li class="read">
                         </li>
                     </a>
@@ -1850,7 +1850,7 @@
             <div class="info">
                 <img src="/resources/images/white.jpg" alt="">
                 <p class="username">
-                    <a href="user">
+                    <a href="/user">
                         Walter White
                     </a>
                     <br>
@@ -1861,7 +1861,7 @@
             </div>
             <p class="title">
                 Nuevos conceptos de diseño por
-                <a href="user">
+                <a href="/user">
                     Walter White
                 </a>
             </p>
@@ -1875,7 +1875,7 @@
                     </li>
                     <li class="star">
                     </li>
-                    <a href="/user/img/2">
+                    <a href="/user/img/2" target="_blank">
                         <li class="read">
                         </li>
                     </a>
@@ -1886,7 +1886,7 @@
             <div class="info">
                 <img src="/resources/images/white.jpg" alt="">
                 <p class="username">
-                    <a href="user">
+                    <a href="/user">
                         Walter White
                     </a>
                     hizo un commit a
@@ -1912,7 +1912,7 @@
                     </li>
                     <li class="star">
                     </li>
-                    <a href="/user/img/3">
+                    <a href="/user/img/3" target="_blank">
                         <li class="read">
                         </li>
                     </a>
@@ -1923,7 +1923,7 @@
             <div class="info">
                 <img src="/resources/images/white.jpg" alt="">
                 <p class="username">
-                    <a href="user">
+                    <a href="/user">
                         Walter White
                     </a>
                     <br>
@@ -1945,7 +1945,7 @@
                     </li>
                     <li class="star">
                     </li>
-                    <a href="/user/img/photoshop">
+                    <a href="/user/img/photoshop" target="_blank">
                         <li class="read">
                         </li>
                     </a>
