--- a/user.html
+++ b/user.html
@@ -149,7 +149,7 @@
                             <ul>
                                 <li class="bookmark"></li>
                                 <li class="star"></li>
-                                <a href="article.html">
+                                <a href="" target= "_blank">
                                     <li class="read"></li>
                                 </a>
                             </ul>
@@ -219,7 +219,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/1">
+                                        <a href="/user/img/1" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -230,7 +230,7 @@
                                     <img src="/resources/images/white.jpg" alt="">
                                     <p class="username"><a href="/user">Walter White</a><br><span class="time">24 de Octubre a las 0:30 am</span></p>
                                 </div>
-                                <p class="title">Novedades en Adobe Photoshop CC</p>
+                                <p class="title">Nove<a href= "/article.html" target= "_blank">dades e</a>n Adobe Photoshop CC</p>
                                 <section id="picture">
                                     <img class="pic" src="/resources/images/article/avatar.jpg" alt="" class="big">
                                 </section>
@@ -239,7 +239,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="article.html">
+                                        <a href="/user/img/avatar" target= "_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -259,7 +259,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/2">
+                                        <a href="/user/img/2" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -279,7 +279,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/3">
+                                        <a href="/user/img/3" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -299,7 +299,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/photoshop">
+                                        <a href="/user/img/photoshop" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -319,7 +319,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/2">
+                                        <a href="/user/img/2" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -339,7 +339,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/3">
+                                        <a href="/user/img/3" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -359,7 +359,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/photoshop">
+                                        <a href="/user/img/photoshop" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -379,7 +379,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/2">
+                                        <a href="/user/img/2" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -399,7 +399,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/3">
+                                        <a href="/user/img/3" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -419,7 +419,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/photoshop">
+                                        <a href="/user/img/photoshop" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -439,7 +439,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/2">
+                                        <a href="/user/img/2" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -459,7 +459,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/3">
+                                        <a href="/user/img/3" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -479,7 +479,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/photoshop">
+                                        <a href="/user/img/photoshop" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -499,7 +499,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/2">
+                                        <a href="/user/img/2" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -519,7 +519,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/3">
+                                        <a href="/user/img/3" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -539,7 +539,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/photoshop">
+                                        <a href="/user/img/photoshop" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -559,7 +559,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/2">
+                                        <a href="/user/img/2" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -579,7 +579,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/3">
+                                        <a href="/user/img/3" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -599,7 +599,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/photoshop">
+                                        <a href="/user/img/photoshop" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -619,7 +619,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/2">
+                                        <a href="/user/img/2" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -639,7 +639,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/3">
+                                        <a href="/user/img/3" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -659,7 +659,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/photoshop">
+                                        <a href="/user/img/photoshop" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -679,7 +679,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/2">
+                                        <a href="/user/img/2" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -699,7 +699,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/3">
+                                        <a href="/user/img/3" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -719,7 +719,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/photoshop">
+                                        <a href="/user/img/photoshop" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
@@ -739,7 +739,7 @@
                                     <ul>
                                         <li class="bookmark"></li>
                                         <li class="star"></li>
-                                        <a href="/user/img/2">
+                                        <a href="/user/img/2" target="_blank">
                                             <li class="read"></li>
                                         </a>
                                     </ul>
