--- a/L.html
+++ b/L.html
@@ -2065,6 +2065,7 @@
                     <div class='insignia' style='top: 14px;' title='Proyecto completado (dinosaurios)'> </div>
                     <div class='insignia' style='top: 39px;' title='EP (Planifique)'> </div> <div class='insignia' style='top: 43px;'   title='Proyecto completado (Robot De Dedicatorias)'> </div>
                 </div>">Luis Eduardo Gallego García</a> <br><span title="18 de Marzo de 2022 a las 7:35 pm" class="time">18 de Marzo a las    7:35 pm</span></p>
+                <span title="Editado el 3 de Agosto de 2022 a las 5:33 pm" class="Editado">Editado</span>
                                 </div>
                                 <p class="title"></p>
                                 <section class="navigation">
@@ -2080,6 +2081,9 @@
                                         </section>
                                         <section class="picture">
                                             <img class="pic" src="/resources/images/A.K.A._Dizzy/HQ90sglfFm.jpg" alt="" class="big">
+                                        </section>
+                                        <section class="picture">
+                                            <img class="pic" src="/resources/images/A.K.A._Dizzy/OB4BT5600x.jpg" alt="" class="big">
                                         </section>
                                         <section class="picture">
                                             <img class="pic" src="/resources/images/A.K.A._Dizzy/ASk65nzCoF.jpg" alt="" class="big">
