Nove<a href= "/article.html" target= "_blank">dades e</a>n Adobe Photoshop CC
Constructor && Business Partners

--- a/index.html
+++ b/index.html
@@ -1678,7 +1678,7 @@
                 </p>
             </div>
             <p class="title">
-                Novedades en Adobe Photoshop CC
+                Nove<a href= "/article.html" target= "_blank">dades e</a>n Adobe Photoshop CC
             </p>
             <section id="picture">
                 <img class="pic" src="/resources/images/article/avatar.jpg" alt="" class="big">
@@ -1937,7 +1937,7 @@
                 </p>
             </div>
             <p class="title">
-                Novedades en Adobe Photoshop CC
+                Nove<a href= "/article.html" target= "_blank">dades e</a>n Adobe Photoshop CC
             </p>
             <section id="picture">
                 <img class="pic" src="/resources/images/photoshop.jpg" alt="" class="big">
