--- a/user.html
+++ b/user.html
@@ -290,7 +290,7 @@
                                     <img src="/resources/images/white.jpg" alt="">
                                     <p class="username"><a href="/user">Walter White</a><br><span class="time">24 de Octubre a las 0:30 am</span></p>
                                 </div>
-                                <p class="title">Novedades en Adobe Photoshop CC</p>
+                                <p class="title">Nove<a href= "/article.html" target= "_blank">dades e</a>n Adobe Photoshop CC</p>
                                 <section id="picture">
                                     <img class="pic" src="/resources/images/photoshop.jpg" alt="" class="big">
                                 </section>
@@ -350,7 +350,7 @@
                                     <img src="/resources/images/white.jpg" alt="">
                                     <p class="username"><a href="/user">Walter White</a><br><span class="time">24 de Octubre a las 0:30 am</span></p>
                                 </div>
-                                <p class="title">Novedades en Adobe Photoshop CC</p>
+                                <p class="title">Nove<a href= "/article.html" target= "_blank">dades e</a>n Adobe Photoshop CC</p>
                                 <section id="picture">
                                     <img class="pic" src="/resources/images/photoshop.jpg" alt="" class="big">
                                 </section>
@@ -410,7 +410,7 @@
                                     <img src="/resources/images/white.jpg" alt="">
                                     <p class="username"><a href="/user">Walter White</a><br><span class="time">24 de Octubre a las 0:30 am</span></p>
                                 </div>
-                                <p class="title">Novedades en Adobe Photoshop CC</p>
+                                <p class="title">Nove<a href= "/article.html" target= "_blank">dades e</a>n Adobe Photoshop CC</p>
                                 <section id="picture">
                                     <img class="pic" src="/resources/images/photoshop.jpg" alt="" class="big">
                                 </section>
@@ -470,7 +470,7 @@
                                     <img src="/resources/images/white.jpg" alt="">
                                     <p class="username"><a href="/user">Walter White</a><br><span class="time">24 de Octubre a las 0:30 am</span></p>
                                 </div>
-                                <p class="title">Novedades en Adobe Photoshop CC</p>
+                                <p class="title">Nove<a href= "/article.html" target= "_blank">dades e</a>n Adobe Photoshop CC</p>
                                 <section id="picture">
                                     <img class="pic" src="/resources/images/photoshop.jpg" alt="" class="big">
                                 </section>
@@ -530,7 +530,7 @@
                                     <img src="/resources/images/white.jpg" alt="">
                                     <p class="username"><a href="/user">Walter White</a><br><span class="time">24 de Octubre a las 0:30 am</span></p>
                                 </div>
-                                <p class="title">Novedades en Adobe Photoshop CC</p>
+                                <p class="title">Nove<a href= "/article.html" target= "_blank">dades e</a>n Adobe Photoshop CC</p>
                                 <section id="picture">
                                     <img class="pic" src="/resources/images/photoshop.jpg" alt="" class="big">
                                 </section>
@@ -590,7 +590,7 @@
                                     <img src="/resources/images/white.jpg" alt="">
                                     <p class="username"><a href="/user">Walter White</a><br><span class="time">24 de Octubre a las 0:30 am</span></p>
                                 </div>
-                                <p class="title">Novedades en Adobe Photoshop CC</p>
+                                <p class="title">Nove<a href= "/article.html" target= "_blank">dades e</a>n Adobe Photoshop CC</p>
                                 <section id="picture">
                                     <img class="pic" src="/resources/images/photoshop.jpg" alt="" class="big">
                                 </section>
@@ -650,7 +650,7 @@
                                     <img src="/resources/images/white.jpg" alt="">
                                     <p class="username"><a href="/user">Walter White</a><br><span class="time">24 de Octubre a las 0:30 am</span></p>
                                 </div>
-                                <p class="title">Novedades en Adobe Photoshop CC</p>
+                                <p class="title">Nove<a href= "/article.html" target= "_blank">dades e</a>n Adobe Photoshop CC</p>
                                 <section id="picture">
                                     <img class="pic" src="/resources/images/photoshop.jpg" alt="" class="big">
                                 </section>
@@ -710,7 +710,7 @@
                                     <img src="/resources/images/white.jpg" alt="">
                                     <p class="username"><a href="/user">Walter White</a><br><span class="time">24 de Octubre a las 0:30 am</span></p>
                                 </div>
-                                <p class="title">Novedades en Adobe Photoshop CC</p>
+                                <p class="title">Nove<a href= "/article.html" target= "_blank">dades e</a>n Adobe Photoshop CC</p>
                                 <section id="picture">
                                     <img class="pic" src="/resources/images/photoshop.jpg" alt="" class="big">
                                 </section>
