Búsqueda básica  en Inicio y en los usuarios
Constructor && Business Partners

--- a/A.K.A._Dizzy.html
+++ b/A.K.A._Dizzy.html
@@ -81,6 +81,10 @@
             </ul>
         </nav>
     </header>
+    <aside class="searchResults hidden">
+        <div>
+        </div>
+    </aside>
     <section id="wrapper" class="theater"></section>
     <style class="zer">
     </style>
