--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
             </ul>
         </nav>
     </header>
+    <aside class="searchResults hidden">
+        <div>
+        </div>
+    </aside>
     <section id="wrapper" class="theater">
     </section>
     <style class="zer">
@@ -763,7 +767,7 @@
                                     </ul>
                                 </div>
                             </section>
-                            <section class="story mult_img repost">
+                            <section class="story repost">
                                 <div class="info">
                                     <img class="repost" src="/resources/images/L/OGnpwD3jys_tn.jpg" alt="">
                                     <div class="repostedFrom"></div>
