--- a/G-Suschrist.html
+++ b/G-Suschrist.html
@@ -81,6 +81,10 @@
             </ul>
         </nav>
     </header>
+    <aside class="searchResults hidden">
+        <div>
+        </div>
+    </aside>
     <section id="wrapper" class="theater"></section>
     <style class="zer">
     </style>
