--- a/user.html
+++ b/user.html
@@ -78,6 +78,10 @@
             </ul>
         </nav>
     </header>
+    <aside class="searchResults hidden">
+        <div>
+        </div>
+    </aside>
     <section id="wrapper" class="theater"></section>
     <style class="zer">
     </style>
